--- a/tinker/templates/foundation_base.html
+++ b/tinker/templates/foundation_base.html
@@ -13,7 +13,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% block title %}{{title}}{% endblock %}</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
+    <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='bower_components/react/react.js') }}"></script>
+    <script src="{{ url_for('static', filename='bower_components/react/react-dom.js') }}"></script>
 
     {% block meta %}
     <meta name="viewport" content="width=device-width" /><meta charset="utf-8">
