--- a/tinker/templates/foundation_base.html
+++ b/tinker/templates/foundation_base.html
@@ -15,7 +15,12 @@
     <title>{% block title %}{{title}}{% endblock %}</title>
     <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='bower_components/react/react.js') }}"></script>
-    <script src="{{ url_for('static', filename='bower_components/react/react-dom.js') }}"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">#}
 
     {% block meta %}
     <meta name="viewport" content="width=device-width" /><meta charset="utf-8">
