--- a/tinker/admin/program_search/templates/index.html
+++ b/tinker/admin/program_search/templates/index.html
@@ -11,4 +11,7 @@
 <div id="main"></div>
 {% endblock %}
 
+{% block scripts %}
+    <script src="{{ url_for('static', filename='scripts/js/admin/program_search/scripts/program_search.js') }}"></script>
+{% endblock %}
 
