start adding CKEditor plugins

--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -97,6 +97,12 @@
       if (typeof(CKEDITOR) != "undefined"){
         CKEDITOR.config.format_tags = 'p';
         CKEDITOR.config.disableNativeSpellChecker = false;
+        CKEDITOR.config.extraPlugins = 'wordcount,notification';
+        CKEDITOR.config.wordcount = {
+            maxWordCount: 200,
+            showParagraphs: false
+        }
+
       }
       $(document).foundation();
   });
