only e-ann get 150 word count.

--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -136,6 +136,12 @@
 
 {% endblock %}
 
+{% block ckeditor_extra %}
+    CKEDITOR.config.wordcount = {
+        maxWordCount: 150,
+        showParagraphs: false
+    }
+{% endblock %}
 
 {% block scripts %}
 
