add help text to form, limit title to 60 characters.

--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -109,6 +109,13 @@
           {% elif field.type == "CKEditorTextAreaField" %}
             {{ field(class="ckeditor") }}
             <br />
+
+          {% elif field.type == "InfoField" %}
+            <p>
+                <div>Your announcement can run twice/semester.</div></br>
+                <div>Announcements must be submitted by 1 p.m. on the business day before they are sent.</div>
+            </p>
+
           {% elif field.type == "DateField" %}
             {% if field.name == 'first' and first_readonly %}
                 <div>
