keep moving towards single base class.

--- a/tinker/e_announcements/templates/confirm.html
+++ b/tinker/e_announcements/templates/confirm.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="large-12 columns">
         <h1>Congrats!</h1>
-        {% if new_or_edit == 'new' %}
+        {% if status == 'new' %}
             <p>
               You've successfully created your E-Announcement. Once your E-Announcement has been approved, it will appear on your Tinker <a href="/e-announcement">E-Announcement page</a> where you'll be able to view the announcement page or make changes to it.
             </p>
