Search method working
Added ‘@route’s to allow methods to use the jquery post method

--- a/tinker/new_redirects/templates/redirects.html
+++ b/tinker/new_redirects/templates/redirects.html
@@ -57,7 +57,6 @@
   <script type="text/javascript">
 
   function updateTable(data){
-      console.log("YO");
       $("#redirects-table").html(data);
       $('#new-redirect-to').attr("disabled", false)
       //should the inputs be disabled?
@@ -94,10 +93,10 @@ var delay = (function(){
     // type needs to be either 'from_path' or 'to_url'
     var search = {'type': type, 'search': search_value};
     console.log("test1");
-    var url = "{{ url_for('redirects.RedirectsView:post') }}";
+    var url = "{{ url_for('redirects.RedirectsView:search') }}";
     console.log("test");
       $.post(url, search, function(data) {
-          console.log("Response" + data){# updateTable(data) #};
+          updateTable(data);
       });
   }
 
