--- a/tinker/admin/sync_new/templates/sync-home.html
+++ b/tinker/admin/sync_new/templates/sync-home.html
@@ -5,6 +5,89 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-<a href="{{ url_for('sync.SyncView:all') }}" class="small button success">Sync</a>
+<p>The sync data is contained in this <a target="_blank" href="https://github.com/betheluniversity/tinker/blob/master/tinker/admin/sync/sync_metadata.py">file</a>. You can sync a specific metadata set, data definition, or sync all.</p>
+
+<div class="row">
+    <div class="large-6 columns">
+        <label>Data Definitions
+            <select id="data-definition">
+                {% for id, name in data_definition_mapping.iteritems() %}
+                    <option value="{{ id }}">{{ name }}</option>
+                {% endfor %}
+            </select>
+        </label>
+    </div>
+    <div class="large-6 columns">
+        <div id='submit-data-definition' class="small button success">Sync Data Definition</div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="large-6 columns">
+        <label>Metadata Sets
+            <select id="metadata-set">
+                {% for id, name in metadata_sets_mapping.iteritems() %}
+                    <option value="{{ id }}">{{ name }}</option>
+                {% endfor %}
+            </select>
+        </label>
+    </div>
+    <div class="large-6 columns">
+        <div id='submit-metadata-set' class="small button success">Sync Metadata</div>
+    </div>
+</div>
+
+<hr/>
+<a href="{{ url_for('sync.SyncView:all') }}" class="small button success">Sync All</a>
+
+<style>
+.spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px; /* half width of the spinner gif */
+    margin-top: -50px; /* half height of the spinner gif */
+    text-align:center;
+    z-index:1234;
+    overflow: auto;
+    width: 100px; /* width of the spinner gif */
+    height: 102px; /*hight of the spinner gif +2px to fix IE8 issue */
+}
+</style>
+
+<div id="spinner" class="spinner" style="display:none;">
+    <img id="img-spinner" src="/get-image/waiting.gif" alt="Loading"/>
+</div>
+<div id="output"></div>
+
+<script>
+    $(function(){
+      // bind change event to select
+      $('#submit-metadata-set').on('click', function () {
+          var value = $('#metadata-set').val(); // get selected value
+          var url = "/admin/sync/metadata";
+
+          {# activate waiting gif #}
+          $.post(url, {'id': value}, function (data) {
+                $("#output").html(data);
+            });
+      });
+     // bind change event to select
+      $('#submit-data-definition').on('click', function () {
+          var value = $('#data-definition').val(); // get selected value
+          var url = "/admin/sync/datadefinition";
+
+          {# activate waiting gif #}
+          $('#spinner').show();
+          $.post(url, {'id': value}, function (data) {
+                $("#output").html(data);
+                $('#spinner').hide();
+            });
+      });
+
+    });
+</script>
+
+
 
 {% endblock %}
