--- a/tinker/office_hours/templates/office-hours-form.html
+++ b/tinker/office_hours/templates/office-hours-form.html
@@ -28,17 +28,6 @@
 
 {%  endmacro %}
 
-{#{% marco TimeOpenCloseField(field) -%}#}
-{#{% if field.type == "TimeOpenField" %}#}
-{#                <div id="timeRange" class="timeRange" stlye="float:left">#}
-{#                    {{ CheckFieldLabel(field) }}#}
-{#                    <input type="text" class="time start" size="4" value="{{ edit_data[f.name][name] }}"/> to#}
-{#            {% elif field.type == "TimeCloseField" %}#}
-{#                    {{ CheckFieldLabel(field) }}#}
-{#                    <input type="text" class="time end" size="4" value="{{ edit_data[f.name][name] }}"/>#}
-{#                </div>#}
-{#{% endmacro %}#}
-
 {% macro HoursGroup(f) -%}
     <fieldset>
         <legend>{{ f.name.capitalize() }}</legend>
@@ -52,10 +41,10 @@
                     {{ CheckFieldLabel(field) }}
                     <input type="text" name="{{ field.name }}" class="time end" size="4" value="{{ edit_data[f.name][name] }}"/>
                 </div>
-            {% elif name == 'start_date' %}
+            {% elif name == 'next_start_date' %}
                 {% if field.name == 'next-start_date' %}
                     {{ CheckFieldLabel(field) }}
-                    {{ field() }}
+                    <input type="date" name="{{ field.name }}" value="{{ edit_data[f.name][name].strftime('%Y-%m-%d') }}" />
                 {% endif %}
             {% else %}
                 {{ CheckFieldLabel(field) }}
@@ -139,21 +128,9 @@
                 <div class="large-6 columns">
                     {{ HoursGroup(field) }}
                 </div>
-            {% elif field.type == "TimeOpenField" %}
-                <div id="timeRange" class="timeRange" stlye="float:left">
-                    {{ CheckFieldLabel(field) }}
-                    <input type="text" class="time start" size="4" value="{{ edit_data[name] }}"/> to
-            {% elif field.type == "TimeCloseField" %}
-                    {{ CheckFieldLabel(field) }}
-                    <input type="text" class="time end" size="4" value="{{ edit_data[name] }}"/>
-                </div>
-            {% elif field.name == 'next-start_date' %}
-                {{ CheckFieldLabel(field) }}
-                {{ field() }}
             {% else %}
               {{ CheckFieldLabel(field) }}
               {{ field() }}
-              <br/>
             {% endif %}
         {% endfor %}
         <button type="submit" id="office-hours-submit-btn" class="button postfix">Submit</button>
