--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -27,7 +27,7 @@
       <form id="eventform" action="/event/submit" method="post">
     {% else %}
       <form id="eventform" action="/event/submit-edit" method="post">
-      <input type="hidden" name="event_id" id="event_id" value="{{ event_id }}"/>
+      <input type="hidden" name="event_id" id="event_id" value="{{ id }}"/>
       <input type="hidden" name="author" id="author" value="{{ author }}"/>
     {% endif %}
     <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
