Updated program search to add and update the db/csv

--- a/tinker/admin/program_search/templates/index.html
+++ b/tinker/admin/program_search/templates/index.html
@@ -8,10 +8,129 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-<div id="main"></div>
+<div id="main">
+    <div>
+        <div class="row">
+            <form method="post" action="{{ url_for('program_search.ProgramSearchView:post') }}">
+                <div class="large-6 columns">
+                    <label for="key">Concentration Code or Program Name:</label>
+                    <input type="text" name="key" id='search-key' class='search-input' placeholder="Filter Key" />
+                    <label for="tag">Tag:</label>
+                    <input type="text" name="tag" id='search-tag' class='search-input' placeholder="Filter Tag" />
+                </div>
+                <div class="large-6 columns">
+                    <p>These are for creating new Program Tags.</p>
+                    <label for="outcome">Outcome:</label>
+                    <input type="radio" name="outcome" value="True"> True
+                    <input type="radio" name="outcome" value="False" checked="checked"> False<br/>
+
+                    <label for="topic">Topic:</label>
+                    <input type="radio" name="topic" value="True"> True
+                    <input type="radio" name="topic" value="False" checked="checked"> False<br/>
+
+                    <label for="other">Other:</label>
+                    <input type="radio" name="other" value="True"> True
+                    <input type="radio" name="other" value="False" checked="checked"> False
+
+                    <br/>
+                    <input type="submit" class="button"/>
+                </div>
+            </form>
+        </div>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Key</th>
+                    <th>Tag</th>
+                    <th>Outcome</th>
+                    <th>Topic</th>
+                    <th>Other</th>
+                </tr>
+            </thead>
+            <tbody id="table-body">
+
+            </tbody>
+        </table>
+    </div>
+</div>
+
+{# Delete confirm modal #}
+<div id="confirmModal" class="reveal-modal" data-reveal>
+  <h2>Are you sure you want to delete?</h2>
+  <p class="lead">The redirect will be gone forever and forever.</p>
+
+  <button class="modal-confirm" id="modal-confirm" data-delete-path="">Delete</button>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='scripts/js/admin/program_search/scripts/program_search.js') }}"></script>
+    {#  Script to update the modal submit to delete the correct form#}
+    <script src="/static/csrf-activator.js"></script>
+    <script type="text/javascript">
+{#        $(document).ready(function() {#}
+            var csrftoken = "{{ csrf_token() }}";
+            activateCSRF(csrftoken);
+
+            var delay = (function () {
+                var timer = 0;
+                return function (callback, ms) {
+                    clearTimeout(timer);
+                    timer = setTimeout(callback, ms);
+                };
+            })();
+
+            $(".search-input").keyup(function () {
+                delay(function () {
+                    loadTableForSearch();
+                }, 300);
+            });
+
+            function loadTableForSearch() {
+                var search_url = "{{ url_for('program_search.ProgramSearchView:search') }}";
+
+                var inputs = {
+                    'search_tag': $('#search-tag')[0].value,
+                    'search_key': $('#search-key')[0].value
+                };
+
+                $.ajax({
+                    type: "POST",
+                    url: search_url,
+                    data: JSON.stringify(inputs),
+                    contentType: 'application/json;charset=UTF-8',
+                    success: function (result) {
+                        $('#table-body').html(result);
+                        addHandlersToDelete();
+                    }
+                });
+            }
+
+            function addHandlersToDelete() {
+                var url = "{{ url_for('program_search.ProgramSearchView:index') }}";
+                $('.program-search-row').click(function() {
+                    $("#modal-confirm").attr("data-delete-path", url + $(this)[0].id);
+                    $(document).foundation();
+                    $("#confirmModal").foundation('reveal', 'open');
+                });
+            }
+
+            $("#modal-confirm").click(function(){
+                var search_url = $("#modal-confirm").attr("data-delete-path");
+                $.ajax({
+                    type: "DELETE",
+                    url: search_url,
+                    contentType: 'application/json;charset=UTF-8',
+                    success: function (result) {
+                        $("#confirmModal").foundation('reveal', 'close');
+                        loadTableForSearch();
+                    }
+                });
+            });
+    </script>
+
+{#    <script src="{{ url_for('static', filename='scripts/js/admin/program_search/scripts/program_search.js') }}"></script>#}
 {% endblock %}
 
