Added to nav and updated table header

--- a/tinker/admin/program_search/templates/index.html
+++ b/tinker/admin/program_search/templates/index.html
@@ -41,7 +41,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>Key</th>
+                    <th>Concentration Code or Program Name</th>
                     <th>Tag</th>
                     <th>Outcome</th>
                     <th>Topic</th>
