--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -44,6 +44,7 @@
                   <li><a href="/admin/publish-manager" class="button-nav">Publisher</a></li>
                   <li><a href="/admin/sync" class="button-nav">Sync Metadata</a></li>
                   <li><a href="/admin/blink-roles" class="button-nav">Blink Layout Owners</a></li>
+                  <li><a href="/admin/programsearch" class="button-nav">Program Search Tags</a></li>
               {% endif %}
                 <li><a href="/admin/cache-clear" class="button-nav">Clear Cache</a></li>
                 <li><a href="/admin/redirect" class="button-nav">Redirects</a></li>
