--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -29,7 +29,7 @@
       <hr />
       {% endif %}
 
-    <a href="add#page-title" class="small button success">Create New Event</a>
+    <a href="{{ url_for('events.EventsView:add') }}#page-title" class="small button success">Create New Event</a>
    {% for form in forms%}
       <div class="row">
         <div class="large-6 columns">
@@ -52,8 +52,8 @@
           <ul class="button-group">
             {% if form.is_published %}
               <li><a href="{{ form.path }}" class="small button success">View</a></li>
-              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
-              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>
+              <li><a href="{{ url_for('events.EventsView:edit_event_page', event_id = form.id) }}#page-title" class="small button">Edit</a></li>
+              <li><a href="{{ url_for('events.EventsView:duplicate_event_page', event_id = form.id) }}#page-title" class="small button">Duplicate</a></li>
             {% else %}
               <li><a class="small button success">Not Approved</a></li>
             {% endif %}
@@ -95,8 +95,8 @@
           <ul class="button-group">
             {% if form.is_published %}
               <li><a href="{{ form.path }}" class="small button success">View</a></li>
-              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
-              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>
+              <li><a href="{{ url_for('events.EventsView:edit_event_page', event_id = form.id) }}#page-title" class="small button">Edit</a></li>
+              <li><a href="{{ url_for('events.EventsView:duplicate_event_page', event_id = form.id) }}#page-title" class="small button">Duplicate</a></li>
             {% else %}
               <li><a class="small button success">Not Approved</a></li>
             {% endif %}
@@ -115,7 +115,7 @@
 <div id="confirmModal" class="reveal-modal" data-reveal>
   <h2>Are you sure you want to delete?</h2>
   <p class="lead">Your event page will be unpublished and removed from the calendar.</p>
-  <a class="modal-confirm" id="modal-confirm" href="/delete/formid">Delete</a>
+  <a class="modal-confirm" id="modal-confirm" href="#">Delete</a>
   <a class="close-reveal-modal">&#215;</a>
 </div>
 
