--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -28,7 +28,7 @@
     {% else %}
       <form id="eventform" action="/event/submit/edit" method="post">
       <input type="hidden" name="event_id" id="event_id" value="{{ event_id }}"/>
-      <input type="hidden" name="author" id="author" value="{{ edit_data.author }}"/>
+      <input type="hidden" name="author" id="author" value="{{ author }}"/>
     {% endif %}
     <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
         {% if form.errors %}
